--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 		<meta name="author" content="Jonak Adipta Kalita" />
 		<meta name="publisher" content="Jonak Adipta Kalita" />
 		<meta name="copyright" content="Jonak Adipta Kalita" />
-		<link rel="icon" type="image/jpg" href="{% static 'images/logo.jpg' %}" />
+		<link rel="icon" type="image/png" href="{% static 'images/logo.png' %}" />
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
