--- a/templates/your_profile/your_account.html
+++ b/templates/your_profile/your_account.html
@@ -1,46 +1,62 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
 {% block title %} Your Account {% endblock %}
+{% block head %}
+	<link rel="stylesheet" href="{% static 'styles/your_profile/your_account.css' %}" />
+{% endblock %}
 {% block body %}
 	<br />
 	<div class="container">
-		<h3>Your Profile</h3>
-		<form>
-			<div class="form-group">
-				<label for="my_accountName">Your Name</label>
-				<input
-					type="text"
-					class="form-control"
-					id="my_accountName"
-					value="{{ user.first_name }}"
-					aria-describedby="nameHelp"
-					placeholder="Enter your Name"
+		<div class="your-profile">
+			<h3>Your Profile</h3>
+			<form>
+				<div class="form-group">
+					<label for="my_accountName">Your Name</label>
+					<input
+						type="text"
+						class="form-control"
+						id="my_accountName"
+						value="{{ user.first_name }}"
+						aria-describedby="nameHelp"
+						placeholder="Enter your Name"
+					/>
+				</div>
+				<div class="form-group">
+					<label for="my_accountUsername">Your Username</label>
+					<input
+						type="text"
+						class="form-control"
+						id="my_accountUsername"
+						value="{{ user.username }}"
+						aria-describedby="usernameHelp"
+						placeholder="Enter your Username"
+					/>
+				</div>
+				<div class="form-group">
+					<label for="my_accountEmail1">Your Email</label>
+					<input
+						type="email"
+						class="form-control"
+						id="my_accountEmail1"
+						value="{{ user.email }}"
+						aria-describedby="emailHelp"
+						placeholder="Enter your Email"
+					/>
+				</div>
+			</form>
+		</div>
+		<br />
+		<div class="avatar-container">
+			<h3>Avatar</h3>
+			<div class="avatar-container">
+				<img
+					src="https://avatars.dicebear.com/api/big-ears/{{ user.username }}.svg"
+					alt="avatar"
 				/>
 			</div>
-			<div class="form-group">
-				<label for="my_accountUsername">Your Username</label>
-				<input
-					type="text"
-					class="form-control"
-					id="my_accountUsername"
-					value="{{ user.username }}"
-					aria-describedby="usernameHelp"
-					placeholder="Enter your Username"
-				/>
-			</div>
-			<div class="form-group">
-				<label for="my_accountEmail1">Your Email</label>
-				<input
-					type="email"
-					class="form-control"
-					id="my_accountEmail1"
-					value="{{ user.email }}"
-					aria-describedby="emailHelp"
-					placeholder="Enter your Email"
-				/>
-			</div>
-		</form>
-		<div>
-			<br />
+		</div>
+		<br />
+		<div class="change-password">
 			<h3>Change Password</h3>
 			<form action="change_password/" method="post">
 				{% csrf_token %}
