--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,29 @@
 <!doctype html>
 <html lang="en">
+{% load pwa %}
 {% load static %}
-
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
+		<link rel="manifest" href="/manifest.json" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
 		<meta name="description" content="Jonak Adipta Kalita's Website" />
 		<meta
 			name="keywords"
-			content="Website, MyGames, MySocialMedias, MyPhotos, MyYoutubeVideos, MyDiscordWidget, MyVSCodeExtension"
+			content="Website, MyGames, MySocialMedias, MyPhotos, MyDiscordWidget"
 		/>
 		<meta name="author" content="Jonak Adipta Kalita" />
 		<meta name="publisher" content="Jonak Adipta Kalita" />
 		<meta name="copyright" content="Jonak Adipta Kalita" />
+		<meta name="theme-color" content="#d4edda" />
 		<link rel="icon" type="image/png" href="{% static 'images/logo.png' %}" />
+		<link
+			rel="apple-touch-icon"
+			type="image/png"
+			href="{% static 'images/logo.png' %}"
+		/>
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-title" content="JAKWebsite" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -21,6 +31,20 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="{% static 'styles/base.css' %}" />
+		<!-- <script type="text/javascript">
+			if ("serviceWorker" in navigator) {
+				navigator.serviceWorker.register("/serviceworker.js", {
+					scope: "."
+				}).then((registration) => {
+					console.log(
+						"ServiceWorker registration successful with scope: ", 
+						registration.scope
+					);
+				}, (err) => {
+					console.log("ServiceWorker registration failed: ", err);
+				});
+			}
+		</script> -->
 		<title>JAK Website | {% block title%} {% endblock %}</title>
 		{% block head %} {% endblock %}
 	</head>
