made some unnecessary changes!!

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,3 +1,24 @@
+.close-button {
+    outline: none !important;
+}
+
+body::-webkit-scrollbar {
+    width: 0 !important;
+}
+
+body {
+    overflow: -moz-scrollbars-none;
+	-ms-overflow-style: none;
+}
+
+.notification-bell {
+    position: absolute;
+}
+
+.cursor-not-allowed {
+    cursor: not-allowed !important;
+}
+
 .footer {
     position: fixed;
     left: 0;
@@ -7,32 +28,4 @@
     color: white;
     text-align: center;
     display: block;
-}
-
-.close_button {
-    outline: none !important;
-}
-
-.give__margin_pls {
-    margin-right: 8px;
-}
-
-body::-webkit-scrollbar {
-    width: 0 !important;
-}
-
-body {
-    overflow: -moz-scrollbars-none;
-}
-
-body {
-    -ms-overflow-style: none;
-}
-
-.notification-bell {
-    position: absolute;
-}
-
-.cursor-not-allowed {
-    cursor: not-allowed !important;
 }
