--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
         </div>
 	</center>
     <div class="container">
-        <p class="main_text">
+        <p class="main-text">
             My name is JONAK ADIPTA KALITA. I am a student in Kendriya Vidyalaya Mangaldoi, 
 			I am currently studying in standard '8th'. I am a Coder and also a 'Home Game 
 			Developer'. I code for fun but sometimes I also teach some of my colleagues some 
@@ -27,7 +27,6 @@
 		</p>
         <center>
             <p>😎😎😎😎😎😎</p>
-			<br/>
          </center>
     </div>
 {% endblock %}
