--- a/templates/games/my_own.html
+++ b/templates/games/my_own.html
@@ -2,31 +2,32 @@
 {% block title %} Games | My Own {% endblock %}
 {% block body %}
 	{% if games_own %}
-		<div class="container">
-			<div class="row">
-				{% for i in games_own %}
-					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img
-							loading="lazy"
-							src="/media/{{ i.image }}"
-							class="padded card-img-top"
-							alt="game_img"
-						/>
-						<div class="card-body">
-							<h5 class="card-title">
-								{{ i.game_name }}
-							</h5>
-							<a
-								href="{{ i.game_link }}"
-								target="_blank"
-								class="btn btn-primary"
-							>
-								Play <i class="fas fa-external-link-alt"></i>
-							</a>
-						</div>
-					</div> 
-				{% endfor %}
-			</div>
+		<div class="row">
+			{% for i in games_own %}
+				<div
+					class="card mx-auto my-2 p-2 align-items-center"
+					style="width: 18rem;"
+				>
+					<img
+						loading="lazy"
+						src="/media/{{ i.image }}"
+						class="padded card-img-top"
+						alt="game_img"
+					/>
+					<div class="card-body">
+						<h5 class="card-title">
+							{{ i.game_name }}
+						</h5>
+						<a
+							href="{{ i.game_link }}"
+							target="_blank"
+							class="btn btn-primary"
+						>
+							Play <i class="fas fa-external-link-alt"></i>
+						</a>
+					</div>
+				</div> 
+			{% endfor %}
 		</div>
 	{% else %}
 		<center><h5>Nothing...</h5></center>
