--- a/templates/home.html
+++ b/templates/home.html
@@ -6,60 +6,55 @@
 {% endblock %}
 {% block body %}
 	<br />
-    <div class="container-fluid">
-        <div class="container">
-			<center>
-				<p class="typed_js_text font-weight-bold">
-					<span id="typed"></span>
-				</p>
-			</center>
-            <div class="row">
-				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">My Photos</h5>
-                        <p class="card-text text-center">
-                            Here you'll find my Photos.
-                        </p>
-						<br />
-                        <a href="my_photos/" class="btn btn-primary d-block">Go to My Photos</a>
-                    </div>
-                </div>
-				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">My Games</h5>
-                        <p class="card-text text-center">
-                            Here you'll find my Games.
-                        </p>
-						<br />
-                        <a href="games/" class="btn btn-primary d-block">Go to My Games</a>
-                    </div>
-                </div>
-				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">My Anouncements</h5>
-                        <p class="card-text text-center">
-                            Here you'll find the Announcements.
-                        </p>
-                        <a href="announcements/" class="btn btn-primary d-block">
-							Go to Anouncements
-						</a>
-                    </div>
-                </div>
-				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title text-center">My Discord Widget</h5>
-                        <p class="card-text text-center">
-                            Here you'll find the Widget of my Discord Server.
-                        </p>
-                        <a href="discord_widget/" class="btn btn-primary d-block">
-							Go to Discord Widget
-						</a>
-                    </div>
-                </div>
+	<center>
+		<p class="typedjs-text font-weight-bold">
+			<span id="typed"></span>
+		</p>
+	</center>
+    <div class="row">
+		<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+			<div class="card-body">
+				<h5 class="card-title text-center">My Photos</h5>
+                <p class="card-text text-center">
+					Here you'll find my Photos.
+                </p>
+				<br />
+                <a href="my_photos/" class="btn btn-primary d-block">Go to My Photos</a>
+            </div>
+		</div>
+		<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+			<div class="card-body">
+				<h5 class="card-title text-center">My Games</h5>
+                <p class="card-text text-center">
+					Here you'll find my Games.
+                </p>
+				<br />
+                <a href="games/" class="btn btn-primary d-block">Go to My Games</a>
 			</div>
-        </div>
-		<br/>
-    </div>
+		</div>
+		<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+			<div class="card-body">
+				<h5 class="card-title text-center">My Anouncements</h5>
+				<p class="card-text text-center">
+					Here you'll find the Announcements.
+				</p>
+                <a href="announcements/" class="btn btn-primary d-block">
+					Go to Anouncements
+				</a>
+			</div>
+		</div>
+		<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+			<div class="card-body">
+				<h5 class="card-title text-center">My Discord Widget</h5>
+				<p class="card-text text-center">
+					Here you'll find the Widget of my Discord Server.
+				</p>
+				<a href="discord_widget/" class="btn btn-primary d-block">
+					Go to Discord Widget
+				</a>
+			</div>
+		</div>
+	</div>
 	<script src="{% static 'scripts/home.js' %}"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.9/typed.min.js"
