--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: "Otomanopee One";
+    src: url("/static/fonts/OtomanopeeOne-Regular.ttf") format("truetype");
+}
+
+body, html {
+    padding: 0;
+    margin: 0;
+    font-family: "Otomanopee One";
+}
+
 .close-button {
     outline: none !important;
 }
