--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
 			Medias in the Social Media Page.
 		</p>
         <center>
-            <p>😎😎😎😎😎😎</p>
+            <p class="emojis">😎😎😎😎😎😎</p>
          </center>
     </div>
 {% endblock %}
