the auth modals looking awesome

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -16,4 +16,8 @@ body {
     .contactInput {
         @apply w-[400px] rounded-lg border-[5px] border-gray-300 bg-[#272934] p-4 outline-none sm:w-[500px];
     }
+
+    .authInput {
+        @apply w-[310px] rounded-lg border-[5px] border-gray-300 bg-[#272934] p-4 outline-none;
+    }
 }
