now, just need to get a 100% in `Performence`

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -6,6 +6,7 @@
     font-family: "OtomanopeeOne";
     font-weight: 600;
     src: url(/fonts/OtomanopeeOne-Regular.ttf) format("truetype");
+    font-display: swap;
 }
 
 body {
