--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -10,7 +10,17 @@
 }
 
 body {
-    @apply font-otomanopee-one;
+    @apply cursor-default bg-bg-color font-otomanopee-one;
+}
+
+p,
+input {
+    @apply cursor-text;
+}
+
+a,
+button {
+    @apply cursor-pointer;
 }
 
 @layer components {
