there is still some issue when trying to send email

--- a/backend/templates/auth/send_verification_email.html
+++ b/backend/templates/auth/send_verification_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
 	Hi, {{ user.username }}
 	Please use the link below to verify your account!!
-	https://{{domain}}{% url 'verify_email' uidb64=uid token=token %}
+	https://{{ domain }}/api/auth/verify_email?uidb64={{ uidb64 }}&token={{ token }}
 {% endautoescape %}
