it works now!!!

--- a/backend/templates/auth/send_verification_email.html
+++ b/backend/templates/auth/send_verification_email.html
@@ -3,5 +3,5 @@
 
 	Please use the link below to verify your account!!
 
-	https://{{ domain }}/api/auth/verify_email?uidb64={{ uidb64 }}&token={{ token }}
+	https://{{ domain }}/api/auth/verify_email?uidb64={{ uid }}&token={{ token }}
 {% endautoescape %}
