--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -39,4 +39,8 @@ button {
     .dashboardText {
         @apply text-xl font-semibold;
     }
+
+    .adminButton {
+        @apply inline-block flex-1 rounded bg-blue-600 px-6 py-2.5 text-center text-base font-medium leading-tight text-white shadow-md transition duration-150 ease-in-out hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg;
+    }
 }
