actually, gonna use the color of v2 of the website

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-    @apply cursor-default bg-bg-color-light dark:bg-bg-color-dark;
+    @apply h-screen cursor-default bg-bg-color-dark text-text-color-dark;
 }
 
 p,
