navigation looking much better :)

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -11,3 +11,9 @@ a,
 button {
     @apply cursor-pointer;
 }
+
+@layer components {
+    .custom-underline {
+        @apply underline decoration-orange-400 decoration-2 underline-offset-4;
+    }
+}
