--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@import "tailwind-scrollbar-hide/v4";
 
 @theme inline {
     --color-fg-extralight: #c9d6ef;
@@ -25,6 +24,12 @@
 
 @layer base {
     body {
-        @apply bg-bg-base text-fg-main cursor-default;
+        @apply bg-bg-base text-fg-main cursor-default h-screen scrollbar-hidden overflow-x-hidden overflow-y-scroll;
+    }
+}
+
+@utility scrollbar-hidden {
+    &::-webkit-scrollbar {
+        display: none;
     }
 }
