--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
     --color-fg-dark: #a0b5e2;
     --color-fg-extradark: #96adde;
 
+    --color-bg-lobby: #121212;
     --color-bg-base: #1b222f;
     --color-bg-highlight: #131821;
 
@@ -23,8 +24,6 @@
     --cursor-pointer: url(/cursors/pointer.cur), pointer;
     --cursor-text: url(/cursors/text.cur), text;
 }
-
-/* Custom Cursors, h-screen issue & Responsiveness */
 
 @layer base {
     body {
