--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@custom-variant dark (&:is(.dark *));
+
 @plugin "tailwind-scrollbar";
 
 @theme inline {
@@ -26,6 +28,10 @@
 }
 
 @layer base {
+    * {
+        @apply border-border outline-ring/50;
+    }
+
     body {
         /* TODO: Add Custom Scrollbar */
         @apply bg-bg-base text-fg-main cursor-default overflow-x-hidden;
