holy shit I havent done web dev like this in a long ass time!

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@
 }
 
 @layer components {
-    .gradient-text {
+    .text-gradient {
         background: linear-gradient(
             to right,
             #93c5fd,
